<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_primary"

    tools:context=".Feedback">

    <TextView
        android:id="@+id/feedbackinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_about_your_experience"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="755dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackinfo"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/dark_orange_secendary"
            android:text="@string/feedbacksubject" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textEmailSubject" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/dark_orange_secendary"
            android:text="Content:" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="textLongMessage"
            android:text="Body"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:background="@color/orange_primary"
            android:onClick="sendFeedbackInfo"
            android:fontFamily="@font/roboto"
            android:text="@string/send_feedback" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>