...
            android:layout_weight="1"
            android:onClick="sendAbout"
            android:text="@string/about" />

        <Button
            style="@style/borderless_button"
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="sendFeedback"
            android:text="Feedback - Give ideas to the Creators" />


    </LinearLayout>

    <Button
        android:layout_width="59dp"
...
